# ml-ops-segm

./: .gitignore  .pre-commit-config.yaml  README.md  data.dvc  model.dvc  pyproject.toml
.dvc/: config
configs/: main.yaml
ml-ops-segmentation/: train.py
ml_ops_segmentation/: infer.py  model.py  train.py
