[tool.poetry]
name = "ml_ops_segmentation"
version = "0.1.0"
description = "Package for image segmentation"
authors = ["nickboyar <chief.boiarckin@icloud.com>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.18"
numpy = "1.26.2"
torch = "2.1.2"
opencv-python = "4.8.1.78"
matplotlib = "3.8.2"
tqdm = "4.66.1"
scikit-image = "0.22.0"
pathlib = "1.0.1"
onnxruntime = "1.16.3"
onnx = "1.15.0"
hydra-core = "1.3.2"
mlflow = "2.9.2"


[tool.poetry.dev-dependencies]
pre-commit = "3.6.0"
dvc = {extras = ["gdrive"], version = "3.36.1"}


[tool.black]
line-length = 90
target-version = ["py39"]

[tool.isort]
known_local_folder = ["ml_ops_segmentation"]
profile = "black"
line_length = 90
lines_after_imports = 2


[tool.nbqa.config]
black = "pyproject.toml"
isort = "pyproject.toml"

[tool.nbqa.mutate]
black = 1
isort = 1


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
